# ChangeLog for dev-python/setuptools
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/setuptools/ChangeLog,v 1.79 2009/11/01 23:40:02 arfrever Exp $

*setuptools-0.6.8 (02 Nov 2009)

  02 Nov 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -setuptools-0.6.7.ebuild, +setuptools-0.6.8.ebuild:
  Version bump.

*setuptools-0.6.7 (01 Nov 2009)

  01 Nov 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +setuptools-0.6.7.ebuild:
  Version bump.

  29 Oct 2009; Markus Meier <maekke@gentoo.org> setuptools-0.6.4.ebuild:
  amd64/x86 stable, bug #289312

  24 Oct 2009; Tobias Klausmann <klausman@gentoo.org>
  setuptools-0.6.4.ebuild:
  Stable on alpha, bug #289312

  24 Oct 2009; nixnut <nixnut@gentoo.org> setuptools-0.6.4.ebuild:
  ppc stable #289312

  18 Oct 2009; Jeroen Roovers <jer@gentoo.org> setuptools-0.6.4.ebuild:
  Stable for HPPA (bug #289312).

  16 Oct 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  setuptools-0.6.6.ebuild:
  Don't try to 2to3 some files (bug #289026).

*setuptools-0.6.6 (16 Oct 2009)

  16 Oct 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +setuptools-0.6.6.ebuild:
  Version bump.

*setuptools-0.6.4 (11 Oct 2009)

  11 Oct 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -setuptools-0.6_rc9.ebuild, +setuptools-0.6.4.ebuild:
  Version bump.

  06 Oct 2009; Raúl Porcel <armin76@gentoo.org> setuptools-0.6-r1.ebuild:
  ia64/s390/sh/sparc stable wrt #284972

  03 Oct 2009; Diego E. Pettenò <flameeyes@gentoo.org>
  +setuptools-0.6.3-r2.ebuild:
  Restore older revision.

*setuptools-0.6.3-r3 (02 Oct 2009)

  02 Oct 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -setuptools-0.6.3-r2.ebuild, +setuptools-0.6.3-r3.ebuild:
  Add new revision to ensure that dev-python/setuptools is installed by
  default for Python 2 and Python 3.

  01 Oct 2009; Tobias Klausmann <klausman@gentoo.org>