@@ -8,10 +8,10 @@ DIST distribute-0.6.6.tar.gz 527816 RMD160 d225ade6b99de9fc2ca5e353315c9db14b11c
 DIST distribute-0.6.8.tar.gz 390582 RMD160 9115d95c07e9b650c4a5227abe0fdcecd03662a7 SHA1 8e37560e68c042baacb18d78b5b5197d6d9c5610 SHA256 308efb4ff5cfe47703050ad96c6818f452b3dcd82c612be1dde260839239d87d
 DIST distribute-0.6.tar.gz 258257 RMD160 42ebd5e9e5047d5722d63cb0f7f07e351e5c6dee SHA1 c7c61ee27236980c4c734ae82e48834fb7771fdc SHA256 8f788db7e913040150387eae3333f4f82acb59858b6163c945eed127140c67f0
 DIST setuptools-0.6c9.tar.gz 252744 RMD160 bc0ee3821e76b57fd13425b16c4419dbccf95ed9 SHA1 79086433b341f0c1df45e10d586a7d3cc25089f1 SHA256 e6190497301b6cb1484b9e6173723452c8df1b4cd9ea97af75c9589b1c34b3d8
-EBUILD setuptools-0.6-r1.ebuild 1383 RMD160 b2422e730118846188e1cbf5016c7747a83e083b SHA1 f2e461953a567e838ac97e24a56774c747bd4801 SHA256 ce3cdce178a8817a104e9cdac99b00cf9a4771cdc86ff4986b7dc4e1757c91eb
-EBUILD setuptools-0.6.3-r3.ebuild 1454 RMD160 bc6ca8637e30988f521420e124b2bb713a07c58c SHA1 c5d87d78d4760082e3bd711de14a1701b43fbf58 SHA256 29b2327a0f1b92ffc77f5aff7136ce844923c380fbb3fa7ab277d0264cd5b5ec
-EBUILD setuptools-0.6.6.ebuild 1622 RMD160 8dbe9659353ba6ab95db3fcf846933cb054932da SHA1 76e286aed2f76280ef8ee59d346f823027df8229 SHA256 1f8eb7ce37783460d004c981a859770ee891a1f59a18bfe2165b5e065ae2e330
-EBUILD setuptools-0.6.8.ebuild 1674 RMD160 bbe7b4c9713d1822a05d607f893ea69b237e3c42 SHA1 313bbd9435e1d61c545830c3f2a54ec1fce57248 SHA256 12c867fa07e05d8bc9bfd32c1ab3e6b05adad8a736b28786185d7071abcc9bcd
+EBUILD setuptools-0.6-r1.ebuild 1361 RMD160 5efbcec3bcaf3e0a8bd08e76ad1fe0be141e0166 SHA1 4fae3a58325688809412a04f82c8ef19241be103 SHA256 7bc2b05759251e2d0cae7b980ffb4a89a2234090cb8307bfdb6b18458c99e5d9
+EBUILD setuptools-0.6.3-r3.ebuild 1553 RMD160 0820f25de5a75039202aaae211578e188e532a6d SHA1 0950090b660837449393cca77c6fa9b0b6163dce SHA256 9c82e6fcb305ba1cc5f50cd19aef224810ef7b4f236bf6214f5e6ff917f5ce9f
+EBUILD setuptools-0.6.6.ebuild 1730 RMD160 53d0c34c4aa643d149405d6a6d705445978feee0 SHA1 db5af1b783da243dda031bf65dca7ac2b467b59e SHA256 ebb3160b85efc49d9665647cb7c40121518d5698f5083a3f37428e481f567ea2
+EBUILD setuptools-0.6.8.ebuild 1761 RMD160 085e6111f60c80a170688eefe738ac18216ffc21 SHA1 7b3c8cf09eaa527248d8a0fbf395e5f768cb47f9 SHA256 1c9720c960be89c1d794643392f0f75da351619b68c7cd25b2adcecaa843c2bd
 EBUILD setuptools-0.6_rc9-r1.ebuild 1161 RMD160 3f1ec7686993df5646cabf374485f46b46c3b1d3 SHA1 b7a87b7464b8b505377a6aaf7a3c3c4129cf322c SHA256 355f6caf836a28d736f5e14a0035154c08e6effa9255a1a7a37bc3271503e659
-MISC ChangeLog 11834 RMD160 57cab3e1a30cace3fc6e1a9d6db39bc5c1152e75 SHA1 9c6593866207bac2e222a86d6ad056472190e4f2 SHA256 53e9836f19d5b833cc4d19a8cf2a7505aa734dfe4209ef855f0a13905736c722
+MISC ChangeLog 12114 RMD160 97af7218c2d9f433b0b206e4067c12e816136ac8 SHA1 28a387df0707bf9f356f4e7a4149027409b6aa77 SHA256 b3aa90fdd005adb48180dac60aa0d2e6c40af1262a2618e9bf950cc2357b07cd
 MISC metadata.xml 160 RMD160 e730f96ab97c5be577a6d6d05f04990374a0dffb SHA1 2aa5e6be9c265c0e7bceb78ee9fd20df5f818e36 SHA256 6cd954a9de2307c57d32b25fa3599dee2908a4ddc6a98594f593d53577307a3a
